# germinette

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  debug_import.py  extract_pdf.py  install.sh  mod01_output.txt  mod05_text.txt  module_07_pdf_text.txt  pyproject.toml  read_pdf_01.py  read_pdf_05.py  setup.py  uninstall.sh
.github/workflows/: ci.yml
germinette/: __init__.py  __main__.py  core.py  utils.py
germinette/subjects/: a_maze_ing.py  python_module_00.py  python_module_01.py  python_module_02.py  python_module_03.py  python_module_04.py  python_module_05.py  python_module_06.py  python_module_07.py  python_module_08.py  python_module_09.py  python_module_10.py
tests/: test_a_maze_ing_checker_alignment.py  test_a_maze_ing_checker_seed_logic.py  test_integration_module07.py  test_module00_v30_alignment.py  test_module01_v30_alignment.py  test_module02_v30_alignment.py  test_module03_v30_alignment.py  test_module04_v30_alignment.py  test_module05_v30_alignment.py  test_module06_v20_alignment.py  test_module07_v30_alignment.py  test_module08_v30_alignment.py  test_module09_v30_alignment.py  test_module10_v30_alignment.py  test_module_detector_alignment.py  test_mypy_fallback.py
tests/fixtures/python_module_07_golden/: README.md  __init__.py  battle.py  capacitor.py  tournament.py
tests/fixtures/python_module_07_golden/ex0/: Card.py  CreatureCard.py  __init__.py  creatures.py  factories.py  main.py
tests/fixtures/python_module_07_golden/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  __init__.py  capabilities.py  creatures.py  factories.py  (+1 more)
(+15 files in other folders)
